@@ -1,0 +1,74 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+          "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+  <link rel="stylesheet" href="../style.css" type="text/css" /> 
+  <meta http-equiv="refresh" content="300" />
+  <title>Munin :: <TMPL_VAR NAME="DOMAIN"> :: <TMPL_VAR NAME="NODE"></title>
+  <meta http-equiv="content-type" content="application/xhtml+xml; charset=iso-8859-1" />
+  <meta name="author" content="Auto-generated by Munin" />
+</head>
+<body>
+<table cellpadding="3" border="0">
+  <tr>
+    <td rowspan="2"><div class="logo">&nbsp;</div></td>
+    <td valign="top">
+      <h2><a href="../index.html">Overview</a> :: <a href="index.html">
+      <TMPL_VAR NAME="DOMAIN"></a> :: [ <a href="comparison-day.html">day</a> <a href="comparison-week.html">week</a> <a href="comparison-month.html">month</a> year ]</h2>
+    </td>    
+  </tr>
+  <tr>
+    <td valign="top">
+      <h2><TMPL_VAR NAME="DOMAIN"> :: [ <TMPL_LOOP NAME="CATEGORIES"><a <TMPL_IF NAME="STATE_WARNING">class="warn"</TMPL_IF> <TMPL_IF NAME="STATE_CRITICAL">class="crit"</TMPL_IF> href="#<TMPL_VAR ESCAPE="HTML" NAME="NAME">"><TMPL_VAR NAME="NAME"></a> </TMPL_LOOP>]</h2>
+    </td>
+  </tr>
+</table>
+
+<table class="invisiblebox">
+  <tr><td>
+    <hr class="ruler" />
+  </td></tr>
+
+  <TMPL_LOOP NAME="CATEGORIES">
+  <tr><td class="graphbox" id="<TMPL_VAR ESCAPE="HTML" NAME="NAME">">
+  <table>
+      <!-- <a id="<TMPL_VAR ESCAPE="HTML" NAME="NAME">">&nbsp;</a> -->
+        <tr><td colspan="<TMPL_VAR NAME="numnodes">"><h3 class="nobottom"> <TMPL_VAR NAME="NAME"></h3></td></tr>
+        <tr><td colspan="<TMPL_VAR NAME="numnodes">"><hr class="ruler2" /></td></tr>
+        <TMPL_LOOP NAME="SERVICES">
+          <tr>
+		    <TMPL_LOOP NAME="NODES">
+            <td width="<TMPL_VAR NAME="WIDTH">" valign="top">
+			<table class="invisiblebox">
+			  <tr colspan=2><td></td></tr>
+			  <tr colspan=2><td><div class="lighttext"><TMPL_VAR NAME="NODE"> :: <TMPL_IF NAME="URL"><a <TMPL_IF NAME="STATE_WARNING">class="warn"</TMPL_IF> <TMPL_IF NAME="STATE_CRITICAL">class="crit"</TMPL_IF> href="<TMPL_VAR NAME="URL">"></TMPL_IF><TMPL_VAR NAME="LABEL"><TMPL_IF NAME="URL"></a></TMPL_IF></div></td></tr>
+			  <tr><td>
+			<a name="<TMPL_VAR ESCAPE="HTML" NAME="LABEL">"><TMPL_IF NAME="IMGYEAR"><a href="<TMPL_VAR NAME="URL">"><img src="<TMPL_VAR NAME="IMGYEAR">" alt="<TMPL_VAR NAME="LABEL">" <TMPL_IF NAME="IMGYEARWIDTH">width="<TMPL_VAR NAME="IMGYEARWIDTH">" </TMPL_IF> <TMPL_IF NAME="IMGYEARHEIGHT">height="<TMPL_VAR NAME="IMGYEARHEIGHT">"</TMPL_IF>/></a></TMPL_IF></a>
+			</td></tr>
+			</table>
+			</td>
+			</TMPL_LOOP>
+          </tr>
+        </TMPL_LOOP>
+	</table>
+  </td></tr>
+
+  <tr><td></td></tr>
+
+  </TMPL_LOOP>
+  <tr><td class="linkbox">
+ <TMPL_LOOP NAME="DOMAINS">
+<a href="../<TMPL_VAR NAME="DOMAIN">/index.html"><TMPL_VAR NAME="DOMAIN"></a> :
+    </TMPL_LOOP>
+ </div>
+ </td></tr>
+</table>
+
+ <table cellpadding="2" cellspacing="4" border="0">        
+  <tr>
+    <td><i class="small">This page was generated by <a href="http://munin.sourceforge.net/">Munin</a> version @@VERSION@@ at <TMPL_VAR NAME="TIMESTAMP"></i></td>
+  </tr>
+ </table>
+</body>
+</html>
