@@ -16,6 +16,7 @@ munin (work)
   * Added new config option "local_address", to specify which local address
     outgoing connections (from munin-update) should be used.
   * New wildcard plugin generic/ping_ to graph ping times.
+  * Added "comparison" views, to view a whole hostgroup at once.
 
 munin (1.1.4)
 
